<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CHIGGA</string>
    <string name="item_name_1">嘻哈圈</string>
    <string name="item_name_2">奇格镇</string>
    <string name="item_name_3">黄鬼</string>
    <string name="back">返回</string>
    <string name="dian_zan">点赞</string>
    <string name="share">分享</string>
    <string name="write_comment">写评论</string>
    <string name="my_attention">我的关注</string>
    <string name="my_fans">粉丝</string>
    <string name="my_published">已发布</string>
    <string name="my_all_fans">全部粉丝</string>
    <string name="my_interested_fans">粉丝中你可能感兴趣的人</string>
    <string name="more">更多</string>
    <string name="comment_hint">随便说点奇格的</string>
    <string name="load_more">上拉加载更多</string>
    <string name="personal_category_view_settings">设置</string>
    <string name="personal_information_view_title">填写用户信息</string>
    <string name="personal_information_view_head">头像</string>
    <string name="personal_information_view_nick_name">昵称</string>
    <string name="personal_information_view_nick_name_hint">让其他Chigga怎么称呼你？</string>
    <string name="personal_information_view_sex">性别</string>
    <string name="personal_information_view_male">男</string>
    <string name="personal_information_view_female">女</string>
    <string name="personal_information_view_others">其他</string>
    <string name="login_view_title">快捷登陆</string>
    <string name="login_view_tips">登陆认证后才能成为一名真正的Chigga哦！</string>
    <string name="login_view_phone_number_hint">请输入手机号码</string>
    <string name="login_view_verification_code_hint">请输入验证码</string>
    <string name="login_view_get_verification_code">获取验证码</string>
</resources>
