<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="328dp"
    android:layout_height="440dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >

    <!-- login view title -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_view_title"
            android:textSize="18dp"
            android:textColor="@color/login_view_title"
            />
    </LinearLayout>

    <!-- tips -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_view_tips"
            />
    </LinearLayout>

    <!-- phone number & verification code -->
    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/login_view_input_bg"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        >

        <!-- phone number -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            >
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:imeOptions="actionNext"
                android:hint="@string/login_view_phone_number_hint"
                android:background="@color/transparent"
                />
        </LinearLayout>

        <!-- verification code & get verification code -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            >

            <!-- verification code -->
            <EditText
                android:id="@+id/verification_code"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:imeOptions="actionNext"
                android:hint="@string/login_view_verification_code_hint"
                android:background="@color/transparent"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/dividing_line"
                android:paddingLeft="15dp"
                />

            <!-- get verification code -->
            <Button
                android:id="@+id/get_verification_code"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/login_view_get_verification_code"
                android:background="@color/transparent"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- login button -->
    <LinearLayout
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:src="@drawable/login_view_login"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />
</LinearLayout>
