<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    >
    <!-- back button & title -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/title_bar"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:id="@+id/btn_back"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/back_arrow"
                android:layout_marginLeft="15dp"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                >
            </TextView>
        </LinearLayout>
        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="25dp"
            android:textColor="@color/white"
            >
        </TextView>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:visibility="invisible"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/back_arrow"
                android:layout_marginLeft="15dp"
                >
            </ImageView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginLeft="5dp"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>

    <!-- content -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="vertical"
        >

        <!-- head icon -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/personal_information_view_line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/personal_information_view_head"
                />
            <ImageButton
                android:id="@+id/head_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/personal_information_view_picture"
                />
        </LinearLayout>

        <!-- nick name -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/personal_information_view_line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/personal_information_view_nick_name"
                />
            <EditText
                android:id="@+id/nick_name"
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:layout_marginRight="30dp"
                android:imeOptions="actionNext"
                android:hint="@string/personal_information_view_nick_name_hint"
                />
        </LinearLayout>

        <!-- sex -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/personal_information_view_line"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:text="@string/personal_information_view_sex"
                />

            <!-- male -->
            <LinearLayout
                android:id="@+id/sex_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/personal_information_view_sex_male"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/sex_male_text"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information_view_male"
                    android:gravity="center"
                    android:background="@drawable/personal_information_view_sex_selected_bg"
                    />
            </LinearLayout>

            <!-- female -->
            <LinearLayout
                android:id="@+id/sex_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/personal_information_view_sex_female"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/sex_female_text"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information_view_female"
                    android:gravity="center"
                    android:background="@drawable/personal_information_view_sex_normal_bg"
                    />
            </LinearLayout>

            <!-- others -->
            <LinearLayout
                android:id="@+id/sex_others"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginRight="10dp"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/personal_information_view_sex_others"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:id="@+id/sex_others_text"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_information_view_others"
                    android:gravity="center"
                    android:background="@drawable/personal_information_view_sex_normal_bg"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <!-- fill empty -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        >
        <ImageButton
            android:id="@+id/btn_confirm"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:src="@drawable/personal_information_view_confirm"
            />
    </LinearLayout>
</LinearLayout>
