<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/transparent"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="204dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/banner_user"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <ImageView
                android:gravity="center"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:src="@drawable/img_user"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:id="@+id/nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                />
            <ImageView
                android:id="@+id/gender"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/male"
                android:layout_marginLeft="10dp"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/signature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="63dp"
        android:orientation="horizontal"
        android:background="@drawable/personal_item_bg"
        >
        <LinearLayout
            android:id="@+id/btn_my_attention"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/transparent"
            >
            <TextView
                android:id="@+id/my_attention_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_attention"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_my_fans"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/transparent"
            >
            <TextView
                android:id="@+id/my_fans_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_fans"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btn_my_published"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/transparent"
            >
            <TextView
                android:id="@+id/my_published_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_published"
                />
        </LinearLayout>
    </LinearLayout>

    <!-- more -->
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        >
        <!-- settings -->
        <TableRow>
            <Button
                android:id="@+id/settings"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:text="@string/personal_category_view_settings"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>
